# GiBUU-t2k-dev

./: .gitmodules  AddInitStateInfo_fixed.patch  CMakeLists.txt  GiBUU2016_ArbFlux_ProdCharg.patch  LICENSE  README.md  setup.sh
GiBUUToStdHep/: GiBUUToStdHep.cxx  GiBUUToStdHep_Utils.cxx  GiBUUToStdHep_Utils.hxx  GiRooTracker.cxx  GiRooTracker.hxx  makefile
GiBUUToStdHep/dox/: GiBUUToStdHep.dox.cfg
GiBUUTools/: BinEdgeToBinCenterPDFFlux.cxx  GiBUUToStdHep.cxx  GiBUUToStdHep_Utils.cxx  GiBUUToStdHep_Utils.hxx  GiRooTracker.cxx  GiRooTracker.hxx  makefile
batchjobs/: GenerateAll.sh  GenerateT2KCH.sh  Generate_Batch.sh  GiBUU_2017DefaultCard.in  GiBUU_ANLPiProd.job.in  GiBUU_BNLPiProd.job.in  ProcessToStdHep.sh  RunGiBUUBatch.sh
batchjobs/fluxes/: DrawFlux.C  MINERvA_nue_fhc_2015.txt  MINERvA_nue_rhc_2015.txt  MINERvA_nueb_fhc_2015.txt  MINERvA_nueb_rhc_2015.txt  MINERvA_numu_fhc_2015.txt  MINERvA_numu_rhc_2015.txt  MINERvA_numubar_fhc_2015.txt  MINERvA_numubar_rhc_2015.txt  MiniBooNE_NP_numu.txt  MiniBooNE_NP_numub.txt  MiniBooNE_PP_numu.txt  T2K_ND5_FHC_numu.txt  T2K_ND5_FHC_numub.txt
cint_macros/: Plot_MiniBooNE_CH2_CC1pip_Q2.C  Plot_MiniBooNE_CH2_CCQE_Q2.C  Select_CC1pip.C
cmake/: GiBUU.cmake  LUtils.cmake  docsSetup.cmake
cmake/toconfigure/: Generate_ArgoNeut_numuCC_Ar_Events_GIBUU.in  Generate_DUNE_numuCC_Ar_Events_GIBUU.in  Generate_MINERvA_numuCC_CH_Events_GIBUU.in  Generate_MiniBooNE_numuCC_CH2_Events_GIBUU.in  Generate_ND280_numuCC_CH_Events_GIBUU.in  GiBUUInitNeutrinoJobCard.in  GiBUUTools.dox.cfg.in  MakeBUUInputSoftlink.in  Select_CC1pi_GiBUUStdHep.in  setup.sh.in
dox/: CLIOptions.md  FurtherAnalysis.md  OutputFileFormat.md  Quickstart.md  RunningGiBUU.md
jobcards/: ArgoNeut_Ar_numuCC.job  DUNE_Ar_numuCC.job  MINERvA_C_numuCC.job  MINERvA_H_numuCC.job  MiniBooNE_C_numuCC.job  MiniBooNE_H_numuCC.job  ND280_C_numuCC.job  ND280_H_numuCC.job  monoE_numu_CC_GiBUU2017.job
jobcards/escat/: 005_inclusive_electron_scattering.job  Incl_C_EIn0.560_AngOut60.000_Barreau.job
patches/: GiBUU2016_ArbFlux_ProdCharg.patch  GiBUU2016_ArbFlux_ProdCharge.patch  GiBUU2017_ArbFlux_ProdCharge.patch  NDK.GiBUU2017.patch
scripts/: CountGiBUUEvents
src/: GiBUUFluxTools.cxx  GiBUUToStdHep.cxx  GiBUUToStdHep_CLIOpts.cxx  GiBUUToStdHep_CLIOpts.hxx  GiBUUToStdHep_Utils.cxx  GiBUUToStdHep_Utils.hxx  GiRooTracker.cxx  GiRooTracker.hxx
